# grounded-rag-owasp

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py
app/routers/: ask.py  documents.py  ingest.py
app/services/: change_detector.py  chunker.py  embedder.py  generator.py  reranker.py  retrieval.py
db/: schema.sql
docs/: CORPUS.md  TRD.md
scripts/: fetch_corpus.sh
tests/: conftest.py  test_change_detector.py  test_chunker.py  test_documents_smoke.py  test_embedder.py  test_ingest.py
